--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -63,6 +63,7 @@ search:
     - app/assets/images
     - app/assets/fonts
     - app/views/shared/newrelic/_browser_instrumentation.html.erb
+    - app/javascript/app/local-time.js
 
   ## Alternatively, the only files or `File.fnmatch patterns` to search in `paths`:
   ## If specified, this settings takes priority over `exclude`, but `exclude` still applies.
