--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ Vagrantfile
 !/cert/*.crt.example
 /config/application.yml
 /config/aws.yml
+/geo_data/*
 /keys/*.key.enc
 !/keys/*.key.enc.example
 /keys/equifax_rsa
