--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -499,6 +499,7 @@ production:
       - 'https://training.vgihub.geointservices.io/op_redirect'
       - 'https://wiki.vgihub.geointservices.io/op_redirect'
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
 
   # NGA GEOWorks Landing Page
   'urn:gov:gsa:openidconnect.profiles:sp:sso:nga:landingpage':
@@ -517,6 +518,7 @@ production:
       - 'https://nga-geoworks.io/auth/login-gov/callback/loa-1'
       - 'https://ngageoworks.io/auth/login-gov/callback/loa-1'
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
 
   # NGA GEOINT Viewer
   'urn:gov:gsa:openidconnect.profiles:sp:sso:nga:geoint_viewer':
@@ -534,6 +536,7 @@ production:
       - 'https://gv.nga-geoworks.io/protected/callback'
       - 'https://gv.ngageoworks.io/protected/callback'
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
 
   # NGA HiPER CLOUD
   'urn:gov:gsa:openidconnect.profiles:sp:sso:nga:hiper_look':
@@ -559,6 +562,7 @@ production:
       - 'https://hiperlook.nga-geoworks.com/auth_redirect'
       - 'https://hiperlook.nga-geoworks.com:443/auth_redirect'
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
 
   # NGA MAGE
   'urn:gov:gsa:openidconnect.profiles:sp:sso:nga:mage':
@@ -576,6 +580,7 @@ production:
       - 'https://mage.nga-geoworks.io/auth/login-gov/callback/loa-1'
       - 'https://mage.ngageoworks.io/auth/login-gov/callback/loa-1'
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
 
   # DOT
   'urn:gov:gsa:openidconnect.profiles:sp:sso:dot:login':
@@ -605,6 +610,7 @@ production:
       - 'https://symphony.nga-geoworks.com/guacamole/#/'
       - 'https://symphony.nga-geoworks.com/secured'
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
 
   # Secret Service PIX
   'urn:gov:gsa:SAML:2.0.profiles:sp:sso:usss:pix':
@@ -638,6 +644,7 @@ production:
     attribute_bundle:
       - x509_subject
       - x509_presented
+    piv_cac: true
 
   # My Move.mil
   'urn:gov:gsa:openidconnect.profiles:sp:sso:dod:mymovemilprod':
@@ -656,6 +663,7 @@ production:
     attribute_bundle:
       - x509_subject
       - x509_presented
+    piv_cac: true
 
   # DOT – National Registry of Certified Medical Examiners App
   'urn:gov:dot:openidconnect.profiles:sp:sso:dot:nr_auth':
@@ -686,6 +694,8 @@ production:
       - 'https://sam.gov/portal/SAM'
       - 'https://www.sam.gov/portal/SAM'
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
+    piv_cac_scoped_by_email: true
 
   # SAM – System for Award Management / testing prod from UAT
   'urn:gov:gsa:openidconnect.profiles:sp:sso:gsa:sam_uat':
@@ -698,6 +708,8 @@ production:
     redirect_uris:
       - 'https://uat.sam.gov/portal/SAM'
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
+    piv_cac_scoped_by_email: true
 
   # DOE - Fossil Energy - Import/Export Authorization Portal for Natural Gas
   'urn:gov:gsa:openidconnect.profiles:sp:sso:doe:fergas':
@@ -740,6 +752,7 @@ production:
     attribute_bundle:
       - email
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
 
   # Forest Service Open Forest Permits
   'urn:gov:gsa:open-id-connect:sp:sso:usda-forestservice:epermit-prod':
@@ -824,6 +837,7 @@ production:
     attribute_bundle:
       - email
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
 
   # Pre-mod SAM – System for Award Management
   'urn:gov:gsa:openidconnect.profiles:sp:sso:gsa:pmsam':
@@ -837,6 +851,8 @@ production:
       - 'https://sam.gov/SAM'
       - 'https://www.sam.gov/SAM'
     restrict_to_deploy_env: 'prod'
+    piv_cac: true
+    piv_cac_scoped_by_email: true
 
   # OPM Secure Portal
   'urn:gov:gsa:SAML:2.0.profiles:sp:sso:OPM:TibcoMFT':
