--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -27,6 +27,7 @@ test:
     friendly_name: 'Test SP'
     cert: 'saml_test_sp'
     logo: 'generic.svg'
+    ial: 2
     attribute_bundle:
       - first_name
       - last_name
@@ -315,6 +316,7 @@ production:
     return_to_sp_url: 'https://onlinetest.rrb.gov/AA1/Login/login/RRBHome'
     block_encryption: 'aes256-cbc'
     cert: 'rrb_bos_pre_prod'
+    ial: 2
     attribute_bundle:
       - email
       - first_name
@@ -338,6 +340,7 @@ production:
     cert: 'rrb_benefit_connect_staging'
     redirect_uris:
       - 'https://usrrbsecuredev2.rrb.gov/BenefitOnlineServices/Account/SignInCallback'
+    ial: 2
     attribute_bundle:
       - email
       - first_name
@@ -759,6 +762,7 @@ production:
       - 'https://online.rrb.gov/AA1/login/login/RRBHome'
       - 'https://online.rrb.gov/AA1/login/login/SignInCallback'
     cert: 'rrb_bos_prod'
+    ial: 2
     attribute_bundle:
       - email
       - first_name
