Add ial2 to an sp

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -65,6 +65,7 @@ test:
     cert: 'saml_test_sp'
     friendly_name: 'Test SP'
     assertion_consumer_logout_service_url: ''
+    ial: 2
 
 development:
   'https://rp1.serviceprovider.com/auth/saml/metadata':
