Downgrade to node v8 and ignore engines on install (#2680)
**Why**: The latest CircleCI image is running Node v10, but our IdP
servers are running v8. This change allows CI to work w/ v8 while we
upgrade the IdP servers to v10.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
             - v1-identity-idp-yarn-
       - run:
           name: Install Yarn
-          command: yarn install --cache-folder ~/.cache/yarn
+          command: yarn install --ignore-engines --cache-folder ~/.cache/yarn
       - save-cache:
           key: v1-identity-idp-yarn-{{ checksum "yarn.lock" }}
           paths:
