--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -71,6 +71,7 @@ dashboard_url: 'https://dashboard.demo.login.gov'
 valid_authn_contexts: '["http://idmanagement.gov/ns/assurance/loa/1", "http://idmanagement.gov/ns/assurance/loa/3"]'
 
 twilio_timeout: '5'
+usps_download_sftp_timeout: '5'
 usps_upload_sftp_timeout: '5'
 
 development:
@@ -194,6 +195,11 @@ development:
   usps_confirmation_max_days: '10'
   enable_i18n_mode: 'false'
   enable_load_testing_mode: 'false'
+  usps_download_sftp_directory: '/undeliverable'
+  usps_download_sftp_host: 'localhost'
+  usps_download_sftp_username: 'brady'
+  usps_download_sftp_password: 'test'
+  usps_download_token: '123ABC'
   usps_upload_sftp_directory: '/gsa_order'
   usps_upload_sftp_host: 'localhost'
   usps_upload_sftp_username: 'brady'
@@ -313,6 +319,11 @@ production:
   usps_confirmation_max_days: '30'
   enable_i18n_mode: 'false'
   enable_load_testing_mode: 'false'
+  usps_download_sftp_directory:
+  usps_download_sftp_host:
+  usps_download_sftp_username:
+  usps_download_sftp_password:
+  usps_download_token:
   usps_upload_sftp_directory:
   usps_upload_sftp_host:
   usps_upload_sftp_username:
@@ -436,6 +447,11 @@ test:
   usps_confirmation_max_days: '10'
   enable_i18n_mode: 'false'
   enable_load_testing_mode: 'false'
+  usps_download_sftp_directory:
+  usps_download_sftp_host:
+  usps_download_sftp_username:
+  usps_download_sftp_password:
+  usps_download_token:
   usps_upload_sftp_directory: '/directory'
   usps_upload_sftp_host: 'example.com'
   usps_upload_sftp_username: 'user'
