--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -100,6 +100,7 @@ development:
   aws_ses_region_pool: '{ "us-west-2": 5, "us-east-1": 95 }'
   basic_auth_user_name: 'user'
   basic_auth_password: 'secret'
+  backup_codes_enabled: 'true'
   cloudhsm_enabled: 'false'
   cloudhsm_pin: 'user:password'
   cloudhsm_saml_key_label: 'key1'
@@ -231,6 +232,7 @@ production:
   aws_ses_region_pool:
   basic_auth_user_name:
   basic_auth_password:
+  backup_codes_enabled: 'false'
   cloudhsm_enabled: 'false'
   cloudhsm_pin: 'user:password'
   cloudhsm_saml_key_label: 'key1'
@@ -347,6 +349,7 @@ test:
   aws_ses_region_pool: '{ "us-west-2": 5, "us-east-1": 95 }'
   basic_auth_user_name: 'user'
   basic_auth_password: 'secret'
+  backup_codes_enabled: 'true'
   cloudhsm_enabled: 'false'
   cloudhsm_pin: 'user:password'
   cloudhsm_saml_key_label: 'key1'
