--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -447,7 +447,7 @@ test:
   usps_confirmation_max_days: '10'
   enable_i18n_mode: 'false'
   enable_load_testing_mode: 'false'
-  usps_download_sftp_directory:
+  usps_download_sftp_directory: '/undeliverable'
   usps_download_sftp_host:
   usps_download_sftp_username:
   usps_download_sftp_password:
