LG-337 Add list of recovery codes as a 2FA option
**Why**: Users need the ability to use one time codes that are not tied to any external device

**How**: Add the backup_code_configurations table as a one to many for users.  Generate the encrypted codes on setup and regeneration.  Allow each code to be used once and marked as used.  Lookup codes by fingerprint and user id.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -125,6 +125,7 @@ development:
   aws_ses_region_pool: '{ "us-west-2": 5, "us-east-1": 95 }'
   basic_auth_user_name: 'user'
   basic_auth_password: 'secret'
+  backup_codes_enabled: 'true'
   cloudhsm_enabled: 'false'
   cloudhsm_pin: 'user:password'
   cloudhsm_saml_key_label: 'key1'
@@ -260,6 +261,7 @@ production:
   aws_ses_region_pool:
   basic_auth_user_name:
   basic_auth_password:
+  backup_codes_enabled: 'false'
   cloudhsm_enabled: 'false'
   cloudhsm_pin: 'user:password'
   cloudhsm_saml_key_label: 'key1'
@@ -380,6 +382,7 @@ test:
   aws_ses_region_pool: '{ "us-west-2": 5, "us-east-1": 95 }'
   basic_auth_user_name: 'user'
   basic_auth_password: 'secret'
+  backup_codes_enabled: 'true'
   cloudhsm_enabled: 'false'
   cloudhsm_pin: 'user:password'
   cloudhsm_saml_key_label: 'key1'
