LG-869 Add DOL Foreign Labor Gateway SP to Production
**Why**: The agency has completed integration testing and is ready to be promoted to production.

**How**: Add the cert, logo, and update the service_providers.yml

--- a/config/agencies.yml
+++ b/config/agencies.yml
@@ -25,6 +25,8 @@ test:
     name: 'HUD'
   13:
     name: 'SEC'
+  14:
+    name: 'DOL'
 
 development:
   1:
@@ -53,6 +55,8 @@ development:
     name: 'HUD'
   13:
     name: 'SEC'
+  14:
+    name: 'DOL'
 
 production:
   1:
@@ -81,3 +85,5 @@ production:
     name: 'HUD'
   13:
     name: 'SEC'
+  14:
+    name: 'DOL'
