--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -853,3 +853,24 @@ production:
       - 'https://rule19d1.sec.gov/auth/login-gov/callback/loa-1'
       - 'https://rule19d1.sec.gov/auth/login-gov/logout'
     restrict_to_deploy_env: 'prod'
+
+  # Foreign Labor Gateway
+  'urn:gov:gsa:openidconnect.profiles:sp:sso:doloflc:flagapp':
+    agency_id: 14
+    friendly_name: 'Foreign Labor Gateway'
+    agency: 'DOL'
+    logo: 'dol.svg'
+    cert: 'dol_prod'
+    return_to_sp_url: 'https://flag.dol.gov'
+    redirect_uris:
+      - 'https://flag.dol.gov/auth/auth/login-gov/callback/loa-1'
+      - 'https://flag.dol.gov/auth/auth/login-gov/callback/loa-1'
+      - 'https://staging.flag.gov/auth/auth/login-gov/callback/loa-1'
+      - 'https://staging.flag.gov/auth/auth/login-gov/callback/loa-1'
+      - 'http://staging.flag.dol.gov/dashboard/'
+      - 'http://flag.dol.gov/dashboard/'
+      - 'http://staging.flag.dol.gov/'
+      - 'http://flag.dol.gov/'
+    attribute_bundle:
+      - email
+    restrict_to_deploy_env: 'prod'
