LG-869 Add DOL Foreign Labor Gateway SP to Production (#2696)
**Why**: The agency has completed integration testing and is ready to be promoted to production.

**How**: Add the cert, logo, and update the service_providers.yml

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -853,3 +853,35 @@ production:
       - 'https://rule19d1.sec.gov/auth/login-gov/callback/loa-1'
       - 'https://rule19d1.sec.gov/auth/login-gov/logout'
     restrict_to_deploy_env: 'prod'
+
+  # Foreign Labor Application Gateway
+  'urn:gov:gsa:openidconnect.profiles:sp:sso:doloflc:flagapp':
+    agency_id: 14
+    friendly_name: 'Foreign Labor Application Gateway'
+    agency: 'DOL'
+    logo: 'dol.svg'
+    cert: 'dol_prod'
+    return_to_sp_url: 'https://flag.dol.gov'
+    redirect_uris:
+      - 'https://flag.dol.gov/'
+      - 'https://flag.dol.gov/auth/auth/login-gov/callback/loa-1'
+      - 'https://flag.dol.gov/dashboard/'
+    attribute_bundle:
+      - email
+    restrict_to_deploy_env: 'prod'
+
+  # Foreign Labor Application Gateway (staging)
+  'urn:gov:gsa:openidconnect.profiles:sp:sso:doloflc:flagapp_staging':
+    agency_id: 14
+    friendly_name: 'Foreign Labor Application Gateway - Staging'
+    agency: 'DOL'
+    logo: 'dol.svg'
+    cert: 'dol_prod'
+    return_to_sp_url: 'https://staging.flag.dol.gov/'
+    redirect_uris:
+      - 'https://staging.flag.dol.gov/'
+      - 'https://staging.flag.gov/auth/auth/login-gov/callback/loa-1'
+      - 'https://staging.flag.dol.gov/dashboard/'
+    attribute_bundle:
+      - email
+    restrict_to_deploy_env: 'prod'
