[LG-860] Allow piv/cac based on email
**Why**: We are confident that for folk registering with an
email in a set of known domains, we can support their PIV/CAC.

**How**: Rather than check for SP affiliation, just check the
domain of their registered email address.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -98,6 +98,8 @@ piv_cac_email_domains: >-
     "va.gov", "vef.gov"
   ]
 
+allow_piv_cac_by_email_only: 'true'
+
 development:
   aamva_cert_enabled: 'true'
   aamva_public_key: '123abc'
