LG-27 Set PKCE or JWT mode per SP for OpenID Connect
**Why**: To prevent downgrade from JWT to the less secure PKCE by enforcing a single mode per SP

**How**: Add a pkce three state boolean column to service_providers.  This will allow us to support existing sps (null) while forcing future sps and migrated legacy sps to use the new required field in their configuration. Add code to the validation logic which checks for pkce or jwt to also check that the sp's configuration matches the current mode.

--- a/.reek.yml
+++ b/.reek.yml
@@ -116,6 +116,7 @@ detectors:
       - Users::ConfirmationsController
       - ApplicationController
       - OpenidConnectAuthorizeForm
+      - OpenidConnectTokenForm
       - OpenidConnect::AuthorizationController
       - Idv::Session
       - User
