Remove webpack dev server
**Why**: We don't appear to use it has a bug that is causing noise in
our GH security alerts.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.2.0",
     "mocha": "^4.0.1",
-    "proxyquire": "^1.8.0",
-    "webpack-dev-server": "^2.11.1"
+    "proxyquire": "^1.8.0"
   }
 }
