--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,7 @@ jobs:
             cp config/application.yml.example config/application.yml
             cp certs/saml.crt.example certs/saml.crt
             cp certs/saml2018.crt.example certs/saml2018.crt
+            cp certs/samlcloudhsm.crt.example certs/samlcloudhsm.crt
             cp keys/saml.key.enc.example keys/saml.key.enc
             cp keys/saml2018.key.enc.example keys/saml2018.key.enc
             bundle exec rake db:setup --trace
