LG-538 New Document Authentication Design
**Why**: So our users can verify their identity on mobile phones with a camera or desktop computers with a scanned image.

**How**: Detect whether a user is one a mobile phone or a desktop.  Add new flows to accomodate desktop computers, mobile phones, desktop computers to mobile phones (ie user wants to use their camera), and mobile phones to desktop computers (ie user has a scanner).  Add image previews on document uploads.  Supply different verbiage for taking a picture vs. uploading an image.

--- a/.reek.yml
+++ b/.reek.yml
@@ -89,6 +89,7 @@ detectors:
       - Idv::VendorResult
       - CloudhsmKeyGenerator
       - CloudhsmKeySharer
+      - UserMailer
       - WebauthnSetupForm
       - WebauthnVerificationForm
   TooManyStatements:
@@ -166,6 +167,7 @@ detectors:
       - SessionTimeoutWarningHelper#start
       - SessionTimeoutWarningHelper#warning
       - SessionDecorator
+      - SmsDocAuthLinkJob#perform
       - UserEncryptedAttributeOverrides#create_fingerprint
       - LocaleHelper#locale_url_param
       - IdvSession#timed_out_vendor_error
