LG-947 New DOT LMS service provider to production
**Why**: The agency has completed integration testing and is ready to be promoted to production.

**How**: Add the cert, reuse the logo, and update the service_providers.yml.

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -885,3 +885,16 @@ production:
     attribute_bundle:
       - email
     restrict_to_deploy_env: 'prod'
+
+  # DOT – LMS
+  'urn:gov:gsa:openidconnect.profiles:sp:sso:dot:lms':
+    agency_id: 6
+    friendly_name: 'LMS'
+    agency: 'DOT'
+    logo: 'dot.svg'
+    cert: 'dot_lms_prod'
+    return_to_sp_url: 'https://fmcsa.lms.dot.gov'
+    redirect_uris:
+      - 'https://fmcsa.lms.dot.gov'
+      - 'https://fmcsa.lms.dot.gov/openid-connect/dot_login'
+    restrict_to_deploy_env: 'prod'
