--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -898,3 +898,31 @@ production:
       - 'https://fmcsa.lms.dot.gov'
       - 'https://fmcsa.lms.dot.gov/openid-connect/dot_login'
     restrict_to_deploy_env: 'prod'
+
+  # DIS
+  'urn:gov:gsa:openidconnect.profiles:sp:sso:USAID:DIS':
+    agency_id: 15
+    friendly_name: 'DIS'
+    agency: 'USAID'
+    logo: 'usaid.png'
+    cert: 'usaid_prod'
+    return_to_sp_url: 'https://dis.usaid.gov'
+    redirect_uris:
+      - 'https://dis-identity.usaid.gov/signin-oidc'
+    attribute_bundle:
+      - email
+    restrict_to_deploy_env: 'prod'
+
+  # DIS STAGING
+  'urn:gov:gsa:openidconnect.profiles:sp:sso:USAID:DIS-staging':
+    agency_id: 15
+    friendly_name: 'DIS'
+    agency: 'USAID'
+    logo: 'usaid.png'
+    cert: 'usaid_prod'
+    return_to_sp_url: 'https://dis-staging.usaid.gov'
+    redirect_uris:
+      - 'https://dis-identity-staging.usaid.gov/signin-oidc'
+    attribute_bundle:
+      - email
+    restrict_to_deploy_env: 'prod'
