Add encryption contexts to session KMS events
**Why**: So they will show up in cloudtrail with a context, which
separates them from legacy password encryption events

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -204,6 +204,7 @@ development:
   twilio_record_voice: 'true'
   use_dashboard_service_providers: 'true'
   use_kms: 'false'
+  use_kms_context_for_sessions: 'false'
   use_kms_contexts: 'false'
   usps_confirmation_max_days: '10'
   enable_load_testing_mode: 'false'
@@ -318,6 +319,7 @@ production:
   twilio_record_voice: 'false'
   twilio_verify_api_key: 'change-me'
   use_kms: 'true'
+  use_kms_context_for_sessions: 'false'
   use_kms_contexts: 'false'
   usps_confirmation_max_days: '30'
   enable_load_testing_mode: 'false'
@@ -436,6 +438,7 @@ test:
   twilio_record_voice: 'true'
   twilio_verify_api_key: 'secret'
   use_kms: 'false'
+  use_kms_context_for_sessions: 'true'
   use_kms_contexts: 'true'
   usps_confirmation_max_days: '10'
   enable_load_testing_mode: 'false'
