--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -139,6 +139,7 @@ development:
   disallow_all_web_crawlers: 'true'
   doc_auth_enabled: 'false'
   doc_auth_exclusive: 'false'
+  doc_capture_request_valid_for_minutes: '15'
   domain_name: 'localhost:3000'
   enable_rate_limiting: 'false'
   enable_test_routes: 'true'
@@ -257,6 +258,7 @@ production:
   disallow_all_web_crawlers: 'false'
   doc_auth_enabled: 'false'
   doc_auth_exclusive: 'false'
+  doc_capture_request_valid_for_minutes: '15'
   domain_name: 'login.gov'
   enable_rate_limiting: 'true'
   enable_test_routes: 'false'
@@ -376,6 +378,7 @@ test:
   disallow_all_web_crawlers: 'true'
   doc_auth_enabled: 'true'
   doc_auth_exclusive: 'false'
+  doc_capture_request_valid_for_minutes: '15'
   enable_rate_limiting: 'true'
   enable_test_routes: 'true'
   enable_usps_verification: 'true'
