Sunset SAML SLO
**Why**: It causes issues when a SAML SP does not implement SLO
correctly. Additionally, have the SAML SP tied to our logout endpoint
complicates rotating our SAML certificate.

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -48,7 +48,7 @@ test:
   'urn:gov:gsa:openidconnect:test':
     redirect_uris:
       - 'gov.gsa.openidconnect.test://result'
-      - 'gov.gsa.openidconnect.test://result/logout'
+      - 'gov.gsa.openidconnect.test://result/signout'
     cert: 'saml_test_sp'
     friendly_name: 'Example iOS App'
     agency: '18F'
