Add usdoj.gov to list of supported email domains
**Why**: DOJ would like to use PIVs as second factors.

**How**: Add the usdoj.gov domain to the list of email domains we support. fbi.gov was also requested but is already in the list.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -90,7 +90,7 @@ piv_cac_email_domains: >-
     "restorethegulf.gov",
     "sba.gov", "sec.gov", "si.edu", "sss.gov", "state.gov", "stateoig.gov",
     "trade.gov", "truman.gov", "tsp.gov", "tva.gov",
-    "usadf.gov", "uscc.gov", "usccr.gov", "uscirf.gov",
+    "usadf.gov", "uscc.gov", "usccr.gov", "uscirf.gov", "usdoj.gov",
     "va.gov", "vef.gov"
   ]
 
