Parallelize test suite when running with make test
**Why**: So the tests run quicker when run locally

This necesitated a change to the KMS logger spec which was looking at a file that is written to by other processes running the tests.

--- a/config/database.yml
+++ b/config/database.yml
@@ -30,6 +30,7 @@ test:
   <<: *defaults
   pool: 10
   checkout_timeout: 10
+  database: upaya_test<%= ENV['TEST_ENV_NUMBER'] %>
 
 production:
   <<: *defaults
